add mixins and variables

--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -1,8 +1,6 @@
 //breakpoints
 // example @include tablet{...}
 
-
-
 @mixin tablet {
     @media only screen and (min-width: 640px) {
         @content;
@@ -54,6 +52,38 @@
     position: absolute;
 }
 
-.visually-hidden {
-    @extend %visuallyhidden
+// .visually-hidden {
+//     @extend %visuallyhidden
+// }
+
+//keyframe animation
+
+@mixin keyframes($animation-name) {
+    @-webkit-keyframes #{$animation-name} {
+        @content;
+    }
+
+    @-moz-keyframes #{$animation-name} {
+        @content;
+    }
+
+    @-ms-keyframes #{$animation-name} {
+        @content;
+    }
+
+    @-o-keyframes #{$animation-name} {
+        @content;
+    }
+
+    @keyframes #{$animation-name} {
+        @content;
+    }
+}
+
+@mixin animation($str) {
+    -webkit-animation: #{$str};
+    -moz-animation: #{$str};
+    -ms-animation: #{$str};
+    -o-animation: #{$str};
+    animation: #{$str};
 }
