--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -11,6 +11,7 @@ $h3:21px;
 $paragraph-block:23px;
 $paragraph-line:14px;
 $caption:17px;
+$subline:16px;
 $footer-point:14px;
 
 
@@ -76,6 +77,7 @@ $m-screen-w:100vw;
 $m-screen-h:100vh;
 
 //container
+$card:200px;
 $sm:640px;
 $md:768px;
 $lg:1024px;
