--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -3,4 +3,6 @@
 @import "_layouts/base.scss";
 @import "_layouts/layout.scss";
 @import "_modules/font.scss";
+@import "_modules/animation.scss";
+@import "_modules/project-line.scss";
 @import "_modules/header.scss";
