--- a/_sass/_layouts/layout.scss
+++ b/_sass/_layouts/layout.scss
@@ -1,11 +1,11 @@
 @import "variables.scss";
 @import "mixins.scss";
 
-.layout {
-    margin: 0 $s-1;
+// .layout {
+//     margin: 0 $s-3;
 
-    @include tablet {
-        margin: 0 $s-5;
-    }
+//     @include tablet {
+//         margin: 0 $s-5;
+//     }
 
-}
+// }
