--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,5 @@
-<h2>FOOTER IS LOADED</h2>
+<footer class="footer">
+    <a href="/imprint" alt="imprint" class="footer__imprint">imprint</a>
+    <span class="footer__copyright"></span>
+
+</footer>
