--- a/_includes/project-line.html
+++ b/_includes/project-line.html
@@ -1,15 +1,17 @@
-<a href="/maw-print" alt="maw-print project" class='project-line tooltip'>
-    <span id="maw-print">
-        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+{% for project in site.data.projects %}
+<a href="/{{project.project}}" alt="{{project.project}} project" class='project-line tooltip'>
+    <span id="{{project.project}}">
+        <img alt="" src="{{project.img}}" />
     </span>
     <div class='project-line__header'>
         <h2 class='project-line__title'>
-            instruct app
+            {{project.title}}
         </h2>
-        <p class='project-line__subline'>An instruction app to build furniture.</p>
+        <p class='project-line__subline'>{{project.subline}}</p>
     </div>
     <div class='project-line__details'>
-        <p class='project-line__category'>UI/UX & Development</p>
-        <p class='project-line__year'>2020</p>
+        <p class='project-line__category'>{{project.category}}</p>
+        <p class='project-line__year'>{{project.year}}</p>
     </div>
 </a>
+{% endfor %}
