--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -6,3 +6,4 @@
 @import "_modules/animation.scss";
 @import "_modules/project-line.scss";
 @import "_modules/header.scss";
+@import "_modules/footer.scss";
