--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,8 +8,10 @@ $text-base:1rem;
 $h1:39px;
 $h2:31px;
 $h3:21px;
+$h4:24px;
 $paragraph-block:23px;
 $paragraph-line:14px;
+$paragraph-line-small:12px;
 $caption:17px;
 $subline:16px;
 $footer-point:14px;
