--- a/_sass/_modules/header.scss
+++ b/_sass/_modules/header.scss
@@ -4,6 +4,7 @@
     align-items: baseline;
     background: transparent;
     padding: $s-8 $s-3 $s-6;
+    min-height: 120px;
 
     @include tablet {
         position: sticky;
@@ -11,7 +12,8 @@
         width: 100%;
         z-index: 100;
         background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 15%, #ffffff24 100%);
-        padding: $s-12 $s-5 $s-8;
+        padding: $s-12 $s-5 $s-3;
+        min-height: unset;
     }
 
     &__icon {
