--- a/_sass/_modules/project-line.scss
+++ b/_sass/_modules/project-line.scss
@@ -9,7 +9,7 @@
     @include tablet {
         padding: $s-6 0 $s-3;
         margin: 0 $s-5;
-        background: $white;
+        background: $white !important;
         flex-direction: row;
         align-items: baseline;
         height: auto;
@@ -23,7 +23,14 @@
 
         @include tablet {
             letter-spacing: 0.02em;
+            font-size: $h4;
         }
+
+        @include medium {
+            font-size: $h2;
+        }
+
+
     }
 
     &__subline {
@@ -48,13 +55,22 @@
 
         @include tablet {
             border-top: none;
+            width: 250px;
+            display: flex;
+            font-size: $paragraph-line-small;
 
+        }
+
+        @include medium {
+            width: 270px;
+            font-size: $paragraph-line;
         }
     }
 
     &__category {
         @include tablet {
-            margin-right: $s-10;
+            justify-self: center;
+
         }
     }
 
