--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -7,3 +7,5 @@
 @import "_modules/project-line.scss";
 @import "_modules/header.scss";
 @import "_modules/footer.scss";
+@import "_modules/contact.scss";
+@import "_modules/project.scss";
