--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,10 @@
         {{content}}
         {% include footer.html %}
     </div>
-    <script type="text/javascript" src="{{ base.url | prepend: site.url }}/assets/js/tooltip.js"></script>
+    {% if page.title =='home' %}
+    <script class='script-mobile' type="text/javascript"
+        src="{{ base.url | prepend: site.url }}/assets/js/tooltip.js"></script>
+    {% endif %}
 </body>
 
 </html>
