--- a/_includes/project-line.html
+++ b/_includes/project-line.html
@@ -1,6 +1,7 @@
-{% for project in site.data.projects %}
-<a href="/{{project.project}}" alt="{{project.project}} project" style="background-color:{{ project.color }};"
-    class='project-line tooltip'>
+{% assign projects = site.projects | sort: 'n' %}
+{% for project in projects %}
+<a href="{{site.baseurl}}/projects/{{project.project}}" alt="{{project.project}} project"
+    style="background-color:{{ project.color }};" class='project-line tooltip'>
     <span id="{{project.project}}">
         <img alt="" src="{{project.img}}" />
     </span>
