--- a/_sass/_modules/header.scss
+++ b/_sass/_modules/header.scss
@@ -11,7 +11,7 @@
         top: 0;
         width: 100%;
         z-index: 100;
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 15%, #ffffff24 100%);
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 15%, rgba(255, 255, 255, 0) 100%);
         padding: $s-12 $s-5 $s-3;
         min-height: unset;
     }
