--- a/_sass/_modules/tab.scss
+++ b/_sass/_modules/tab.scss
@@ -1,10 +1,10 @@
 .tab {
-    margin: $s-5;
+    margin: $s-3;
     display: flex;
     justify-content: center;
 
     @include tablet {
-        margin: 0;
+        // margin: 0;
         padding-bottom: $s-20;
     }
 
@@ -13,20 +13,16 @@
         font-size: 0;
         line-height: 1;
         width: 100%;
+        border-radius: 3px;
+        box-shadow: 0 0 18px -3px rgba(0, 0, 0, .42);
 
         @include tablet {
-            box-shadow: 0 0 18px -3px rgba(0, 0, 0, .42);
-            margin: $s-5;
-            border-radius: 3px;
-            overflow: hidden;
-
             width: 85%;
-            height: auto;
         }
 
         @include desktop {
 
-            max-width: 75%;
+            max-width: 71%;
 
         }
     }
@@ -70,11 +66,9 @@
 
     &__video-container {
         position: relative;
-        padding-bottom: 56.25%;
-        padding-top: 30px;
+        padding-bottom: 52%;
         height: 0;
         overflow: hidden;
-        margin-bottom: 50px;
     }
 
     &__video-container iframe {
