refine transition timelines, add arrows

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,6 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico" />
     <link rel="author" href="{{ site.url }}" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
 </head>
