--- a/_sass/_modules/tab.scss
+++ b/_sass/_modules/tab.scss
@@ -20,11 +20,11 @@
             width: 85%;
         }
 
-        @include desktop {
-
-            max-width: 71%;
-
+        @include medium {
+            width: 71%;
         }
+
+
     }
 
     &__nav {
