--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -29,6 +29,8 @@ $orange:#F85D33;
 $rose:#E59797;
 $skin:#F5B7A9;
 $dark-skin:#C36035;
+$grey-hover:#a8a8a8;
+$grey-underline:#606060;
 
 
 //spacing
