--- a/_sass/_modules/animation.scss
+++ b/_sass/_modules/animation.scss
@@ -28,3 +28,58 @@
 // .element {
 //     @include animation('shake 0.5s cubic-bezier(.36,.07,.19,.97) both');
 // }
+
+
+
+// @include keyframes(pop) {
+
+//     0% {
+//         background-size: 190%;
+//     }
+
+//     70% {
+//         background-size: 40%;
+//     }
+
+//     860% {
+//         background-size: 50%;
+//     }
+
+//     90% {
+//         background-size: 40%;
+//     }
+
+//     100% {
+//         background-size: 0%;
+//     }
+
+// }
+
+// .element {
+//     @include animation('pop 0.5s cubic-bezier(.36,.07,.19,.97) both');
+// }
+
+
+// @include keyframes(fade) {
+
+//     0% {
+//         opacity: 1;
+//         background-size: 190%;
+//     }
+
+//     70% {
+
+//         opacity: 1;
+//         background-size: 50%;
+//     }
+
+//     100% {
+
+//         opacity: 0;
+//         background-size: 0%;
+//         background-position: left top;
+//         background-size: 202px 57px;
+
+//     }
+
+// }
