--- a/_sass/_modules/contact.scss
+++ b/_sass/_modules/contact.scss
@@ -2,7 +2,7 @@
     margin: $s-8 $s-3;
 
     @include tablet {
-        margin: $s-16 $s-5;
+        margin: $s-8 $s-5;
     }
 
 
@@ -11,17 +11,42 @@
         flex-direction: column;
     }
 
+    &__contact-title {
+        letter-spacing: 0.1em;
+    }
+
     &__contact-line {
         display: flex;
         justify-content: space-between;
-        border-bottom: 1px solid $black;
+
         padding: $s-2 0;
         margin-bottom: $s-3;
+        font-weight: normal;
+        font-family: $medium-font;
+        position: relative;
+
+        &:after {
+            content: '';
+            width: 100%;
+            height: 1px;
+            bottom: 0;
+            background-color: $grey-hover;
+            left: 0;
+            position: absolute;
+
+        }
+
+        &:hover:after {
+            background-color: black;
+        }
+
+
     }
 
     &__arrow {
         background-image: url(../../assets/svgs/contact-arrow.svg);
         background-repeat: no-repeat;
+        text-indent: 100%;
         width: 1.5em;
         background-position: left bottom;
         background-size: contain;
