--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -11,3 +11,4 @@
 @import "_modules/project.scss";
 @import "_modules/tab.scss";
 @import "_modules/stage.scss";
+@import "_modules/footer-project.scss";
