--- a/_sass/_modules/project-line.scss
+++ b/_sass/_modules/project-line.scss
@@ -66,7 +66,7 @@
     }
 
     &__details {
-        border-top: 1px solid $grey-hover;
+        border-top: 1px solid $black;
         display: flex;
         justify-content: space-between;
         padding-top: $s-3;
