--- a/_includes/project-line.html
+++ b/_includes/project-line.html
@@ -1,6 +1,6 @@
 {% assign projects = site.projects | sort: 'n' %}
 {% for project in projects %}
-<a href="{{site.baseurl}}/projects/{{project.project}}" alt="{{project.project}} project"
+<a href="{{site.url}}/projects/{{project.project}}" alt="{{project.project}} project"
     style="background-color:{{ project.color }};" class='project-line tooltip hook' data-aos="fade-in"
     data-aos-delay='200'>
     <span id="{{project.project}}">
