--- a/_sass/_modules/font.scss
+++ b/_sass/_modules/font.scss
@@ -9,7 +9,7 @@
 @font-face {
   font-family: "AkzidenzGroteskPro-Regular";
   src: url("/../../assets/fonts/AkzidGroProReg.woff/fonts/AkzidGroProReg.woff") format("woff"),
-    url("/../../assets/fonts/AkzidGroProReg.woff2/fonts/AkzidGroProReg.woff2") format("woff2");
+    url("/../../assets/fonts/AkzidGroProReg.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
