fix links baseurl links locally

--- a/_includes/footer-project.html
+++ b/_includes/footer-project.html
@@ -1,7 +1,7 @@
 <footer class="footer-project">
     <div class='footer-project__channels'>
 
-        <a href="/contact" alt="imprint" class="footer-project__imprint shake">imprint</a>
+        <a href="{{site.baseurl}}/contact" alt="imprint" class="footer-project__imprint shake">imprint</a>
 
         {% if page.project == 'about' %}
 
@@ -10,7 +10,7 @@
 
         {% else %}
 
-        <a href="/projects/about/" alt="about" class="footer-project__about shake">about</a>
+        <a href="{{site.baseurl}}/projects/about/" alt="about" class="footer-project__about shake">about</a>
         {% endif %}
         <a href="https://www.linkedin.com/in/marina-wilhelm/" alt="linkedin"
             class="footer-project__linkedin shake">linkedin</a>
