--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
-    <a href="/contact" alt="imprint" class="footer__imprint">imprint</a>
+    <a href="{{site.baseurl}}/contact" alt="imprint" class="footer__imprint">imprint</a>
     <span class="footer__copyright"></span>
 </footer>
