hardcode baseurl in font-face

--- a/_sass/_modules/font.scss
+++ b/_sass/_modules/font.scss
@@ -1,15 +1,15 @@
 @font-face {
   font-family: "AkzidenzGroteskPro-Md";
-  src: url("/../../assets/fonts/AkzidGroProMed.woff") format("woff"),
-    url("/../../assets/fonts/AkzidGroProMed.woff2") format("woff2");
+  src: url("portfolio/assets/fonts/AkzidGroProMed.woff") format("woff"),
+    url("portfolio/assets/fonts/AkzidGroProMed.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "AkzidenzGroteskPro-Regular";
-  src: url("/../../assets/fonts/AkzidGroProReg.woff/fonts/AkzidGroProReg.woff") format("woff"),
-    url("/../../assets/fonts/AkzidGroProReg.woff2") format("woff2");
+  src: url("portfolio/assets/fonts/AkzidGroProReg.woff/fonts/AkzidGroProReg.woff") format("woff"),
+    url("portfolio/assets/fonts/AkzidGroProReg.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
