--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,11 +12,11 @@
         {% endif %}
     </div>
     {% if page.title =='home' %}
-    <script type="text/javascript" src="{{ site.baseurl | prepend: site.url }}/assets/js/tooltip.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl | prepend: site.url }}assets/js/tooltip.js"></script>
     {% endif %}
 
     {% if page.title !='project' %}
-    <script type="text/javascript" src="{{ site.baseurl | prepend: site.url }}/assets/js/transitions.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl | prepend: site.url }}assets/js/transitions.js"></script>
     {% endif %}
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
