--- a/_includes/project-line.html
+++ b/_includes/project-line.html
@@ -2,7 +2,7 @@
 {% for project in projects %}
 <a href="{{site.baseurl}}/projects/{{project.project}}" alt="{{project.project}} project"
     style="background-color:{{ project.color }};" class='project-line tooltip hook' data-aos="fade-in"
-    data-aos-delay='200'>
+    data-aos-delay='200' data-aos-anchor-placement="top-bottom">
     <span id="{{project.project}}">
         <img alt="" src="{{{{site.baseurl| prepend: site.url }}{{project.img}}" />
     </span>
