--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,7 +5,7 @@ permalink: /projects/
 ---
 <main>
     <section class='project-line__projectPage' data-aos="fade-in" data-aos-delay="50"
-        style="background-color:{{ page.color }};">
+        data-aos-anchor-placement="top-bottom" style="background-color:{{ page.color }};">
         <div class='project-line__projectPage-header'>
             <h2 class='project-line__projectPage-title'>
                 {{ page.title}}
@@ -48,7 +48,7 @@ permalink: /projects/
         </div>
     </section>
     <section class='{% if page.video == false %} project__no-display {% else %} tab {% endif %}'>
-        <div class='tab__frame' data-aos="fade-up" data-aos-delay="300">
+        <div class='tab__frame' data-aos="fade-up" data-aos-delay="300" data-aos-anchor-placement="top-bottom">
             <div class='tab__nav'>
                 <div class='tab__dots'>
                     <span></span>
