--- a/_sass/_modules/header.scss
+++ b/_sass/_modules/header.scss
@@ -13,7 +13,7 @@
         z-index: 100;
         background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 15%, rgba(255, 255, 255, 0) 100%);
         padding: $s-12 $s-5 $s-3;
-        min-height: unset;
+        min-height: 160px;
     }
 
     &__icon {
